--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -22,10 +22,11 @@
                 .text {
                     padding: 0.5rem 0;
                     font-size: 1rem;
-                    height: 50px;
+                    // height: 50px;
                     display: -webkit-box;
                     -webkit-line-clamp: 2;
                     -webkit-box-orient: vertical;
+                    white-space: nowrap;
                     overflow: hidden;
                     text-overflow: ellipsis;
                 }
