--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,12 @@
+.layout-app {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    .content {
+        flex: 1;
+    }
+}
+
 .popover-carts {
     .pop-cart-body {
         .pop-cart-content {
