--- a/src/components/Order/history.scss
+++ b/src/components/Order/history.scss
@@ -1,7 +1,3 @@
-.ant-table-wrapper {
-    height: 70vh;
-}
-
 .main-header {
     margin: 20px 40px;
     font-weight: 600;
@@ -25,6 +21,7 @@
     display: flex;
     font-size: 1rem;
     gap: 1.25rem;
+
     .action-detail {
         cursor: pointer;
         padding: 0.5rem;
@@ -37,4 +34,23 @@
         color: red;
 
     }
+}
+
+.title {
+    font-size: .8rem;
+    font-weight: bold;
+    font-style: normal;
+}
+
+.totalPrice {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 1rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    font-style: normal;
+
+    .totalPrice-text {}
+
 }
