--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -3,22 +3,69 @@
 
     .order-book {
         display: flex;
-        gap: 30px;
+        flex-direction: column;
+        gap: 10px;
         margin-bottom: 20px;
         background: white;
         padding: 20px;
         border-radius: 5px;
 
+        .title {
+            font-size: 1rem;
+
+        }
+
         .book-content {
             display: flex;
             align-items: center;
             gap: 15px;
-            width: 50%;
-            justify-content: space-between;
+            width: 100%;
 
-            img {
-                width: 70px;
-                height: 70px;
+            .book-content-img {
+                width: 120px;
+                height: 120px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+
+            }
+
+
+            .book-content-info {
+                height: 120px;
+                font-size: 18px;
+                font-weight: 400;
+
+                .quantity {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+
+                    .quantity-title {
+                        font-weight: 600;
+                    }
+                }
+
+                .size {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+
+                    .size-title {
+                        font-weight: 600;
+                    }
+                }
+
+                .price {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 20px;
+
+                    .price-title {
+                        font-weight: 600;
+                    }
+                }
             }
         }
 
